tools/flowc/tests/errors/error27.flow
import list;

main() {
	// Using a non-exported name:

	countListRec(makeList(), 0);
}
